feat: add name, favicon and uptade meta description

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
 .slider {
+  background-color: rgb(1, 1, 15);
   position: relative;
   height: 100vh;
   display: flex;
@@ -7,8 +17,7 @@
 }
 
 .image {
-  width: 1000px;
-  height: 600px;
+  height: 80%;
   border-radius: 10px;
 }
 
@@ -17,7 +26,7 @@
   top: 50%;
   right: 32px;
   font-size: 3rem;
-  color: #000;
+  color: #fff;
   z-index: 10;
   cursor: pointer;
   user-select: none;
@@ -28,7 +37,7 @@
   top: 50%;
   left: 32px;
   font-size: 3rem;
-  color: #000;
+  color: #fff;
   z-index: 10;
   cursor: pointer;
   user-select: none;
